# graphwalker-project

./: .bintray.json  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  bower.json  codecov.yml  deploy.xml  jitpack.yml  package-lock.json  pom.xml
doc/: CLI.odt  dsl.md
graphwalker-cli/: README.md  pom.xml
graphwalker-core/: README.md  pom.xml
graphwalker-dashboard/: README.md  pom.xml
graphwalker-dsl/: README.md  pom.xml
graphwalker-gradle-plugin/: README.md  pom.xml
graphwalker-io/: README.md  pom.xml
graphwalker-java/: README.md  pom.xml
graphwalker-maven-archetype/: README.md  pom.xml
graphwalker-maven-plugin/: README.md  pom.xml
graphwalker-model-checker/: README.md  pom.xml
graphwalker-restful/: README.md  REAME.md  pom.xml
graphwalker-rs/: Cargo.toml  README.md
graphwalker-rs/graphwalker-cli/: Cargo.toml
graphwalker-rs/graphwalker-cli/src/: main.rs
graphwalker-rs/graphwalker-cli/src/commands/: check.rs  convert.rs  methods.rs  mod.rs  offline.rs  online.rs  requirements.rs  source.rs
graphwalker-rs/graphwalker-cli/tests/: cli_tests.rs  online_tests.rs  test.template
graphwalker-rs/graphwalker-cli/tests/fixtures/json/: MultiModelSharedState.json  NoStartElement.json  SimplestModel.json  WithRequirements.json  example.json
graphwalker-rs/graphwalker-core/: Cargo.toml
graphwalker-rs/graphwalker-core/src/: lib.rs
graphwalker-rs/graphwalker-core/src/algorithm/: chinese_postman.rs  mod.rs  tests.rs
graphwalker-rs/graphwalker-core/src/condition/: mod.rs  tests.rs
graphwalker-rs/graphwalker-core/src/generator/: mod.rs  tests.rs
graphwalker-rs/graphwalker-core/src/machine/: mod.rs  tests.rs
graphwalker-rs/graphwalker-core/src/model/: builder.rs  mod.rs  runtime.rs  tests.rs
graphwalker-rs/graphwalker-io/: Cargo.toml
graphwalker-rs/graphwalker-io/src/: graphml.rs  json.rs  lib.rs
graphwalker-rs/graphwalker-io/src/graphml/: tests.rs
graphwalker-rs/graphwalker-io/src/json/: tests.rs
graphwalker-rs/graphwalker-io/tests/fixtures/graphml/: Login.graphml
graphwalker-rs/graphwalker-restful/: Cargo.toml
graphwalker-rs/graphwalker-restful/src/: actor.rs  lib.rs  rest.rs  session.rs  websocket.rs
graphwalker-rs/graphwalker-studio/: Cargo.toml  build.rs
graphwalker-rs/graphwalker-studio/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
graphwalker-rs/graphwalker-studio/frontend/src/: App.tsx  index.css
graphwalker-rs/graphwalker-studio/frontend/src/client/: websocket.ts
graphwalker-rs/graphwalker-studio/frontend/src/components/: EditorTabs.tsx  GraphEditor.tsx  PropertiesPanel.tsx  Sidebar.tsx  StatusBar.tsx
graphwalker-rs/graphwalker-studio/frontend/src/store/: editor-store.ts  execution-store.ts  model-store.ts  session-store.ts  types.ts
graphwalker-rs/graphwalker-studio/src/: main.rs
graphwalker-rs/graphwalker-studio/static/: index.html
graphwalker-rs/graphwalker-studio/static/assets/: index-C5tFCUfF.js  index-CWpSWhR4.css
graphwalker-studio/: .babelrc  .bowerrc  .eslintrc  README.md  bower.json  package.json  (+3 more)
(+2177 files in other folders)
