[package]
name = "graphwalker-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "graphwalker"
path = "src/main.rs"

[dependencies]
graphwalker-core = { path = "../graphwalker-core" }
graphwalker-dsl = { path = "../graphwalker-dsl" }
graphwalker-io = { path = "../graphwalker-io" }
graphwalker-model-checker = { path = "../graphwalker-model-checker" }
graphwalker-restful = { path = "../graphwalker-restful" }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
