[package]
name = "graphwalker-core"
version = "0.1.0"
edition = "2021"
description = "Core domain model and execution engine for GraphWalker model-based testing"
license = "MIT"

[dependencies]
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rhai = "1"
