[package]
name = "graphwalker-io"
version = "0.1.0"
edition = "2021"
description = "Model I/O for GraphWalker: JSON and GraphML/yEd format readers and writers"
license = "MIT"

[dependencies]
graphwalker-core = { path = "../graphwalker-core" }
graphwalker-dsl = { path = "../graphwalker-dsl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
