[package]
name = "graphwalker-studio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "graphwalker-studio"
path = "src/main.rs"

[dependencies]
graphwalker-restful = { path = "../graphwalker-restful" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
